--- a/style/navfoooter.css
+++ b/style/navfoooter.css
@@ -1,6 +1,19 @@
-.mainheade{
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    margin: 10px;
+    padding: 10px;
+}
+
+.mainheader{
     margin: auto;
-    padding: 5px 8px;
+    padding: 10px 8px;
     display: flex;
     align-items: center;
     justify-content: space-between;
